<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">茶百科</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="my_collection">我的收藏</string>
    <string name="hot_search">热门搜索：买买茶</string>
    <string name="shoucangjia">收藏夹</string>
    <string name="history">历史记录</string>
    <string name="map">地图查询</string>
    <string name="about">关于</string>
    <string name="information">版权信息</string>
    <string name="suggestion">意见反馈</string>
    <string name="key">关键字</string>
    <string name="chabaike">茶百科</string>
    <string name="error_network">搜索失败,请检查网络连接！</string>
    <string name="error_key">key验证无效！</string>
    <string name="error_other">未知错误，请稍后重试!错误码为</string>
    <string name="no_result">对不起，没有搜索到相关数据！</string>

</resources>