<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="5"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/tv_toutiao"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="13dp"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:onClick="choose"
                        android:text="头条"
                        android:textColor="#999999"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/tv_baike"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:onClick="choose"
                        android:text="百科"
                        android:textColor="#999999"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/tv_zixun"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:onClick="choose"
                        android:text="咨询"
                        android:textColor="#999999"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/tv_jingying"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:onClick="choose"
                        android:text="经营"
                        android:textColor="#999999"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/tv_data"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:onClick="choose"
                        android:text="数据"
                        android:textColor="#999999"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:orientation="horizontal" >

                    <ImageView
                        android:id="@+id/iv_choose1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="#00aa00" />

                    <ImageView
                        android:id="@+id/iv_choose2"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="#ffffff" />

                    <ImageView
                        android:id="@+id/iv_choose3"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="#ffffff" />

                    <ImageView
                        android:id="@+id/iv_choose4"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="#ffffff" />

                    <ImageView
                        android:id="@+id/iv_choose5"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="#ffffff" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="42dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal" >

                <ImageButton
                    android:id="@+id/ib_setting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/setting"
                    android:onClick="choose" />
            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#00aa00" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <android.support.v4.view.ViewPager
                android:id="@+id/index_pager"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >
            </android.support.v4.view.ViewPager>
        </LinearLayout>
    </LinearLayout>

    <!-- 给listView设置分割线样式：android:divider="@android:color/black" -->


    <!-- 抽屉 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="right"
        android:background="#ffffff"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp" >

            <ImageButton
                android:id="@+id/ib_back"
                android:layout_width="20dp"
                android:layout_height="35dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:background="@drawable/back"
                android:onClick="choose" />

            <ImageButton
                android:id="@+id/ib_index"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:background="@drawable/righttopbutton" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/chabaike"
                android:textColor="#999999"
                android:textSize="20sp" />
        </RelativeLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#00aa00" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="15dp"
                android:focusable="true"
                android:focusableInTouchMode="true" >

                <EditText
                    android:id="@+id/et_search"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:layout_toLeftOf="@+id/ib_search"
                    android:background="@drawable/myedit"
                    android:drawableLeft="@drawable/searchico"
                    android:ems="10"
                    android:hint="@string/key"
                    android:paddingLeft="4dp"
                    android:textSize="15sp" >
                </EditText>

                <ImageButton
                    android:id="@+id/ib_search"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/gosearch"
                    android:onClick="choose" />
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/hot_search"
                android:textColor="#999999"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/shoucangjia"
                android:paddingLeft="8dp"
                android:text="@string/shoucangjia"
                android:textColor="#999999" />

            <TextView
                android:id="@+id/tv_collect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="15dp"
                android:clickable="true"
                android:onClick="choose"
                android:text="@string/my_collection"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_history"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="15dp"
                android:clickable="true"
                android:onClick="choose"
                android:text="@string/history"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_map"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="15dp"
                android:clickable="true"
                android:onClick="choose"
                android:text="@string/map"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/shoucangjia"
                android:paddingLeft="8dp"
                android:text="@string/about"
                android:textColor="#999999" />

            <TextView
                android:id="@+id/tv_information"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="15dp"
                android:clickable="true"
                android:onClick="choose"
                android:text="@string/information"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_suggestion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="15dp"
                android:clickable="true"
                android:onClick="choose"
                android:text="@string/suggestion"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>

</android.support.v4.widget.DrawerLayout>